src/styles/components/cookoon-nav.scss
.cookoon-nav {
  z-index: 1;
  background-color: transparent;
  transition: background-color 0.5s ease;
  & + .content {
    margin-top: 0px;
    transition: margin-top 0.5s;
  }
  &-top {
    padding-top: 30px;
    padding-bottom: 10px;
    position: absolute;
    width: 100%;
    top: 0;
  }
  &-scrolled {
    background-color: $blue;
    position: fixed;
    width: 100%;
    top: 0;
  }
  &-opened {
    background-color: $blue;
  }
}

